--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 project(TiMemory-CXX-Tuple-Example LANGUAGES C CXX)
 
 set(EXE_NAME test_cxx_tuple)
-set(COMPONENTS cxx compile-options extern-templates)
+set(COMPONENTS cxx compile-options extensions extern-templates)
 
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
