Fixes to support CMake 3.10

--- a/cmake/Templates/TiMemoryConfig.cmake.in
+++ b/cmake/Templates/TiMemoryConfig.cmake.in
@@ -152,9 +152,22 @@ if(@PROJECT_NAME@_FIND_COMPONENTS_INTERFACE)
     set(_INTERFACE_LIB ${@PROJECT_NAME@_FIND_COMPONENTS_INTERFACE})
 endif()
 
-add_library(${_INTERFACE_LIB} INTERFACE IMPORTED)
+if(CMAKE_VERSION VERSION_LESS 3.11)
+    if(NOT TARGET ${_INTERFACE_LIB})
+        add_library(${_INTERFACE_LIB} INTERFACE)
+    else()
+        set(_MSG "CMake 3.10 does not fully support IMPORTED INTERFACE libraries")
+        set(_MSG "${_MSG}. The \"${_INTERFACE_LIB}\" target is being modified globally...")
+        set(_MSG "${_MSG}... Consider upgrading CMake or setting")
+        set(_MSG "${_MSG} \"@PROJECT_NAME@_FIND_COMPONENTS_INTERFACE\".")
+        message(WARNING "${_MSG}")
+    endif()
+else()
+    add_library(${_INTERFACE_LIB} INTERFACE IMPORTED)
+endif()
 
 if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "")
+    message(STATUS "Components interface library: ${_INTERFACE_LIB}")
 
     set(_LINK )
     set(_LANGUAGES )
