--- a/examples/ex-cuda-event/CMakeLists.txt
+++ b/examples/ex-cuda-event/CMakeLists.txt
@@ -15,9 +15,10 @@ if(USE_EXTERN_TEMPLATES)
     list(APPEND COMPONENTS extern-templates)
 endif()
 
+set(TiMemory_FIND_COMPONENTS_INTERFACE timemory-cuda-event-example)
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 add_executable(${EXE_NAME} ${EXE_NAME}.cu)
-target_link_libraries(${EXE_NAME} timemory)
+target_link_libraries(${EXE_NAME} timemory-cuda-event-example)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
