--- a/examples/ex-cxx-overhead/CMakeLists.txt
+++ b/examples/ex-cxx-overhead/CMakeLists.txt
@@ -10,9 +10,10 @@ if(USE_EXTERN_TEMPLATES)
     list(APPEND COMPONENTS extern-templates)
 endif()
 
+set(TiMemory_FIND_COMPONENTS_INTERFACE timemory-cxx-overhead-example)
 find_package(TiMemory REQUIRED COMPONENTS ${COMPONENTS})
 add_executable(${EXE_NAME} ${EXE_NAME}.cpp)
-target_link_libraries(${EXE_NAME} timemory)
+target_link_libraries(${EXE_NAME} timemory-cxx-overhead-example)
 
 if(NOT DEFINED TIMEMORY_SETUP_PY OR NOT TIMEMORY_SETUP_PY)
     install(TARGETS ${EXE_NAME} DESTINATION bin)
